--- a/views/update.jade
+++ b/views/update.jade
@@ -28,7 +28,7 @@ block content
 		.form-group
 			input.adventure-rating.form-control(type="number", placeholder="adventure rating")
 		.modal-footer
-			input.btn.btn-info(type="submit", value="Choose a location and Save")
+			input.btn.btn-info.button-text(type="submit", value="Choose a location and Save")
 	#mapcontainer
 		#map-inner-container
 			#map-canvas
