--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,7 +1,3 @@
-body {
-	padding-bottom: 100px;
-}
-
 #map-canvas, html, body { 
 	height: 100%;
 	
@@ -12,11 +8,18 @@ body {
 	margin-right: auto;
 }
 
+#gmap-inner-container { 
+	position: relative;
+	padding-bottom: 75%;
+	height: 0;
+	margin: 10px;
+}
+
 #map-inner-container { 
 	position: relative;
 	padding-bottom: 75%;
 	height: 0;
-	margin: 45px;
+	margin: 20px;
 }
 
 #map-gcanvas {
@@ -31,9 +34,15 @@ body {
 	height: 100%;
 }
 
+#map-canvas > div > div:nth-child(1) > div:nth-child(2) {
+	border-style: solid;
+	border-width: 1px;
+	border-color: yellow;
+}
+
 #map-gcanvas > div > div:nth-child(1) > div:nth-child(2) {
 	border-style: solid;
-    border-width: 1px;
+	border-width: 1px;
 	border-color: yellow;
 }
 
@@ -60,15 +69,51 @@ body {
 
 /*Color styles*/
 
+/*.intro-img {
+	display: block;
+	background: url(http://s16.postimg.org/h9ma6nhg5/maroon_Bowl.jpg) no-repeat center center;
+	background-size: 100%;
+}
 
+.fancy {
+	font-family: "Hoefler Titling A", "Hoefler Titling B", georgia, serif;
+}*/
+
+.wrapper {
+    width: 100%;
+}
+
+/*http://s16.postimg.org/3k6wp7dat/San_Juans_Large.jpg*/
+intro-img {
+    background-image: url(http://s11.postimg.org/4759jweeb/maroon_Bowl_Large.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+
+#text {
+    z-index:100;
+    position:absolute;    
+    color:white;
+    font-size:45px;
+    font-weight:bold;
+    left:150px;
+    top:160px;
+}
+
+.panel {
+	margin: 0;
+}
 .footer {  
 	position: fixed;
 	margin: 0;
 	bottom: 0;
-  	width: 100%;
-  	height: 80px;
-  	background-color: #FF4B34;
-  	opacity: .7
+	width: 100%;
+	height: 80px;
+	background-color: #FF4B34;
+	opacity: .7
 }
 
 .icon-preview {
@@ -77,9 +122,15 @@ body {
 	margin-right: auto
 }
 .icon {
-    font-size: 5em;
-/*    padding-left: 7px;
-    padding-right: 7px;*/
+	font-size: 5em;
+	float: none;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 0px;
+}
+
+.button-text {
+	font-size: 22px;
 }
 
 .red {
