--- a/views/index.jade
+++ b/views/index.jade
@@ -3,37 +3,36 @@ extends layout
 
 block content
 	.panel.panel-default
-		.panel-body.text-center.blue-2
+		.panel-body.text-center
 			h1.text-info.mdi-image-filter-hdr   The Colorado App
-	//- #load-modal.modal.show.fade.col-md-6
-	//- 	.modal-dialog
-	//- 		.modal-content
-	//- 			.modal-header
-	//- 				button.close(type="button", data-dismiss="modal")
-	//- 				h1.modal-title.text-center.text-info.mdi-image-filter-hdr   The Colorado App
-	//- 			.jumbotron
-	//- 				.container
-	//- 					h1 Hello, world!
-	//- 					img(src='http://www.waynewilliamsstudio.com/wp-content/uploads/2010/12/SNEFFELS-Light-on-Peak.jpg')
-	//- 					p
-	#adventure-list
-		h1.text-center FIND ADVENTURES NEAR YOU
-		.btn-group.btn-group-justified(role='group', aria-label='...')
-			a.btn.btn-info(href="/view/trails") Trails
-		.btn-group.btn-group-justified(role='group', aria-label='...')
-			a.btn.btn-info(href="/view/snow") Snow
-		.btn-group.btn-group-justified(role='group', aria-label='...')
-			a.btn.btn-info(href="/view/biking") Biking
-		.btn-group.btn-group-justified(role='group', aria-label='...')
-			a.btn.btn-info(href="/view/geoCache") GeoCaching
-		.btn-group.btn-group-justified(role='group', aria-label='...')
-			a.btn.btn-info(href="/view/adrenaline") Adrenaline
-		.btn-group.btn-group-justified(role='group', aria-label='...')
-			a.btn.btn-info(href="/view/cityLife") City Life
-		.btn-group.btn-group-justified(role='group', aria-label='...')
-			a.btn.btn-info(href="/view/brewery") Brewery
-		.btn-group.btn-group-justified(role='group', aria-label='...')
-			a.btn.btn-info(href="/view/generalShenanigans") General Shenanigans
+	.wrapper
+		img.text-center.intro-img.img-responsive(src='http://s11.postimg.org/4759jweeb/maroon_Bowl_Large.jpg', alt='Responsive image')
+		.sol-sm-6
+			h3#text A community space to find and share adventures
+	.wrapper
+		.container
+			#adventure-list
+				h1.text-center FIND ADVENTURES NEAR YOU
+				.btn-group.btn-group-justified(role='group', aria-label='...')
+					a.btn.btn-info.button-text(href="/view/trails") Hiking
+				.btn-group.btn-group-justified(role='group', aria-label='...')
+					a.btn.btn-info.button-text(href="/view/snow") Snow
+				.btn-group.btn-group-justified(role='group', aria-label='...')
+					a.btn.btn-info.button-text(href="/view/biking") Biking
+				.btn-group.btn-group-justified(role='group', aria-label='...')
+					a.btn.btn-info.button-text(href="/view/geoCache") GeoCaching
+				.btn-group.btn-group-justified(role='group', aria-label='...')
+					a.btn.btn-info.button-text(href="/view/adrenaline") Adrenaline
+				.btn-group.btn-group-justified(role='group', aria-label='...')
+					a.btn.btn-info.button-text(href="/view/cityLife") City Life
+				.btn-group.btn-group-justified(role='group', aria-label='...')
+					a.btn.btn-info.button-text(href="/view/cityLife") City Life
+				.btn-group.btn-group-justified(role='group', aria-label='...')
+					a.btn.btn-info.button-text(href="/view/brewery") Breweries
+				.btn-group.btn-group-justified(role='group', aria-label='...')
+					a.btn.btn-info.button-text(href="/view/generalShenanigans") Music
+				.btn-group.btn-group-justified(role='group', aria-label='...')
+					a.btn.btn-info.button-text(href="/view/generalShenanigans") General Shenanigans
 	#my-adventure
 	//- 	h1.text-center FIND BY LOCATION
 	//- ul
@@ -43,8 +42,6 @@ block content
 	footer.footer.btn-group.btn-group-justified
 		a(title= "SEARCH BY MAP", href="/mapAdventures").btn.icon.mdi-action-language
 		a(title= "MAKE YOUR OWN ADVENTURE", href="/update").btn.icon.mdi-content-add
-		//- a(href="/mapAdventures").btn.icon.mdi-image-filter-hdr
-		//- a(href="/mapAdventures").btn.icon.mdi-image-filter-hdr
 		a(title= "HOME", href="/").btn.icon.mdi-image-filter-hdr
 		
 block scripts
