took out a duplicate

--- a/views/index.jade
+++ b/views/index.jade
@@ -24,7 +24,7 @@ block content
 				.btn-group.btn-group-justified(role='group', aria-label='...')
 					a.btn.btn-info.button-text(href="/view/adrenaline") Adrenaline
 				.btn-group.btn-group-justified(role='group', aria-label='...')
-					a.btn.btn-info.button-text(href="/view/cityLife") City Life
+					a.btn.btn-info.button-text(href="/view/cityLife") Scenic
 				.btn-group.btn-group-justified(role='group', aria-label='...')
 					a.btn.btn-info.button-text(href="/view/cityLife") City Life
 				.btn-group.btn-group-justified(role='group', aria-label='...')
