added media query

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,15 @@
+@media only screen and (max-device-width: 480px) {
+		#text {
+		    z-index:100;
+		    position:absolute;    
+		    color:white;
+		    font-size:20px;
+		    font-weight:bold;
+		    left:150px;
+		    top:160px;
+		}
+	}
+
 #map-canvas, html, body { 
 	height: 100%;
 	
