added some more styles and hero img

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -86,7 +86,7 @@
 }
 
 
-intro-img {
+.intro-img {
     background-image: url(http://s11.postimg.org/4759jweeb/maroon_Bowl_Large.jpg);
     background-repeat: no-repeat;
     background-position: center;
