--- a/views/update.jade
+++ b/views/update.jade
@@ -9,13 +9,15 @@ block content
 		h1.text-info Add an Adventure
 		.form-group
 			select.form-control.adventure-type
-				option(value="trails") Trails
+				option(value="hiking") Hiking
 				option(value="snow") Snow
 				option(value="biking") Biking
-				option(value="adrenaline") Adrenaline
 				option(value="geoCache") GeoCache
+				option(value="adrenaline") Adrenaline
+				option(value="scenic") Scenic
 				option(value="cityLife") City Life
 				option(value="brewery") Brewery
+				option(value="music") Music
 				option(value="generalShenanigans") General Shenanigans
 		.form-group
 			input.adventure-name.form-control(type="text", placeholder="adventure name...")
