optimized images for web

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -87,7 +87,7 @@
 
 
 .intro-img {
-    background-image: url(http://s11.postimg.org/4759jweeb/maroon_Bowl_Large.jpg);
+    background-image: url(/images/maroonBowl.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
