--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block content
 		.panel-body.text-center
 			h1.text-info.mdi-image-filter-hdr   The Colorado App
 	.wrapper
-		img.text-center.intro-img.img-responsive(src='http://s11.postimg.org/4759jweeb/maroon_Bowl_Large.jpg', alt='Responsive image')
+		img.text-center.intro-img.img-responsive(src="/images/maroonBowl.jpg", alt="Responsive image")
 		.sol-sm-6
 			h3#text A community space to find and share adventures
 	.wrapper
