--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,7 @@ extends layout
 // Set the view for maps
 
 block content
+	//- Header
 	.panel.panel-default
 		.panel-body.text-center
 			h1.text-info.mdi-image-filter-hdr   The Colorado App
